[gd_scene load_steps=3 format=3 uid="uid://c5po6g7c75ygs"]

[ext_resource type="Script" path="res://addons/OBSControlLibrary/SlideoutContainer/slide_out_container.gd" id="1_mnexu"]
[ext_resource type="Script" path="res://scenes/ui/main_menu/main_menu.gd" id="1_og5q1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_og5q1")

[node name="SlideMenu" type="Container" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mnexu")
slide_duration = 0.8
transition_type = 7
ease_type = 2

[node name="VLayout" type="VBoxContainer" parent="SlideMenu"]
layout_mode = 2

[node name="BTN_Start" type="Button" parent="SlideMenu/VLayout"]
unique_name_in_owner = true
layout_mode = 2
text = "Start"

[node name="BTN_Options" type="Button" parent="SlideMenu/VLayout"]
layout_mode = 2
text = "Options"

[node name="BTN_Quit" type="Button" parent="SlideMenu/VLayout"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="SlideMenu/VLayout/BTN_Start" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="SlideMenu/VLayout/BTN_Options" to="." method="_on_btn_options_pressed"]
[connection signal="pressed" from="SlideMenu/VLayout/BTN_Quit" to="." method="_on_btn_quit_pressed"]
